# FastAPI_Project

./: .gitignore  .pyproject.toml.swp  README.md  pyproject.toml
fast_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fast_zero/routers/: auth.py  tasks.py  users.py
migrations/versions/: 36a45b14afcc_create_table_user.py  3de881b04bfd_create_table_user.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_tasks.py  test_users.py
